@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Transmitted the attributes of a SourceGroup to the underlying sources
   * Fixed the names of exported files for hazard maps in .geojson format
   * Added an header with metadata to the exported hazard curves and maps
   * Avoid storing filtered-away probability maps, thus fixing a bug
